Fix hamburger menu positioning on mobile - align with logo

--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -27,10 +27,6 @@
 	padding-bottom: 0;
 	padding-top: 10px;
 }
-.header-right {
-	margin-top: 7px;
-	margin-right: 61px;
-}
 .single-slider {
 	min-height: 670px;
 }
@@ -92,10 +88,6 @@
 	padding: 0 10px; /* Maintains padding for consistency */
 }
 
-.header-right {
-	margin-top: 7px;
-	margin-right: 61px;
-}
 .single-slider {
 	min-height: 670px;
 }
@@ -216,11 +208,6 @@
 }
 
 
-.bar {
-	margin-left: 0;
-	margin-right: 0;
-}
-
 .slider-content h2 {
 	font-size: 34px;
 }
@@ -309,19 +296,14 @@
 	min-height: 44vh;
 }
 
-.header-right {
-	margin-top: 0;
-	margin-right: 0;
-	position: absolute;
-	top: 50%;
-	right: 15px;
-	transform: translateY(-50%);
-	z-index: 1001;
-}
-
 /* Override Bootstrap's align-items-center for hamburger column on mobile */
 .col-xl-3.col-lg-9.col-md-8 {
 	align-items: flex-start !important;
+}
+
+.header-right {
+	margin-top: -74px;
+	margin-right: -15px;
 }
 
 .header-right .bar {
@@ -333,6 +315,9 @@
 	height: 50px;
 	line-height: 50px;
 	font-size: 20px;
+	margin-left: 0 !important;
+	margin-right: 0 !important;
+	float: none !important;
 }
 
 .crose {
